Darkmode, type links, other cleanups

--- a/html/index.html
+++ b/html/index.html
@@ -1,22 +1,21 @@
-<!DOCTYPE html><html>
-<head>
+<!DOCTYPE html><html><head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta name="color-scheme" content="light dark">
- <meta name="author" content="Andrew Latham">
+ <meta name="author" content="Andrew (lathama) Latham">
  <meta name="description" content="Stanley Bench Plane Information and Identification">
  <meta name="keywords" content="plane, handplane, bench, hand, tool, wood, woodworking, stanley, bailey">
  <title>Stanley Bench Plane Identification</title>
  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
  <style>
   /* Mobile first then alter for computer */
-  *, html { line-height: 150%; font-size: 100%; }
-  body { background-color: #eee; padding-top: 2em; padding-bottom: 2em; font-size:1.5em; }
+  *, html { line-height: 150%; font-size: 100%; font-family: "Times New Roman", Times, serif;}
+  body { padding-top: 2em; padding-bottom: 2em; font-size: 1.5em; background-color: color-mix(in srgb, Canvas, CanvasText 25%); color: color-mix(in srgb, CanvasText, Canvas 15%); }
   a { text-decoration: none; }
-  h1, h2 { line-height: 150%; }
+  h1, h2 { line-height: 150%; font-size: 2em; }
   #menubutton { padding: 10px; position: fixed; top: 0px; left: 0px; width: 100%; background-color: #333; color: #fff; text-align: center; }
   nav { display: none; position: fixed; top: 0px; left: 0px; width: 100%; background-color: #333; color: #fff; text-align: center;}
-  nav a { display: block; padding: 7px 14px; text-align: center; color: #fff; }
+  nav a { display: block; padding: 7px 14px; text-align: center; color: #fff; font-weight: bold; }
   nav a:hover { background-color: #111; }
   nav:target { display: block !important; }
   dl, dt, dd, ul, li { padding: .2em .2em .2em 1em; list-style-type: square; list-style-position: inside; }
@@ -35,11 +34,10 @@
    #menubutton { display: none; }
    nav { display: block; padding: 0px 20px; }
    nav a { display: inline-block; padding: 14px 16px; }
-   body { background-color: #eee; }
   }
   @media print {
    *, html, body, li { margin: 5px; padding: 5px; font-size: 1em; font-weight: normal; }
-   #menubutton, footer { display: none !important; }
+   #menubutton, footer, nav { display: none; }
    .printonly { display: block;}
    a, a:visited { text-decoration: underline; }
    a[href]:after { content: ' (' attr(href) ')'; }
@@ -445,23 +443,23 @@
   </ul>
  </article>
  <article id="type_1">
-  <h2>Type 1</h2>
-  <h3>1867? - 1869</h3>
+  <h2>Type 1 - 1867? - 1869</h2>
   <p><ul>
    <li>Made in Boston USA by Leonard Bailey</li>
    <li>Stanley bought Bailey in 1869</li>
    <li>Short Front Knob (~2" Height) with a bead in the base</li>
-   <li>Depth knob solid brass or two piece with "BAILEY, WOODS & CO." "BOSTON" "PATENTED" "AUG. 31, 1858, AUG. 6, 1867" stamping</li>
+   <li>Depth knob solid brass or two piece with <br/>
+    "BAILEY, WOODS & CO." "BOSTON" "PATENTED" "AUG. 31, 1858, AUG. 6, 1867" stamping</li>
    <li>Depth knob has right hand threading</li>
    <li>"L. BAILEY'S" "PATENT" "DEC. 24, 1867" stamping on iron and cap iron</li>
    <li>Solid lever cap</li>
    <li>Rounded frog back toward the tote</li>
    <li>Model number likely found under lever cap and or under side of frog</li>
   </ul></p>
+  <h3><a href="#type_2">Next (Type 2)</a></h3>
  </article>
  <article id="type_2">
-  <h2>Type 2</h2>
-  <h3>1869 - 1872</h3>
+  <h2>Type 2 - 1869 - 1872</h2>
   <p><ul>
    <li>Stanley bought Bailey in 1869.</li>
    <li>Short Front Knob (~2 inches height) with a bead in the base</li>
@@ -469,29 +467,29 @@
    <li>Lever cap spring is rectangle shaped</li>
    <li>Depth knob has right hand threading</li>
   </ul></p>
+  <h3><a href="#type_1">Previous (Type 1)</a> - <a href="#type_3">Next (Type 3)</a></h3>
  </article>
  <article id="type_3">
-  <h2>Type 3</h2>
-  <h3>1872 - 1873</h3>
+  <h2>Type 3 - 1872 - 1873</h2>
   <p><ul>
    <li>Short Front Knob (~2 inches height) with a bead in the base</li>
    <li>Ribbed frog receiver design used</li>
    <li>Recessed Lever Cap</li>
    <li>Depth knob has right hand threading</li>
   </ul></p>
+  <h3><a href="#type_2">Previous (Type 2)</a> - <a href="#type_4">Next (Type 4)</a></h3>
  </article>
  <article id="type_4">
-  <h2>Type 4</h2>
-  <h3>1874 - 1884</h3>
+  <h2>Type 4 - 1874 - 1884</h2>
   <p><ul>
    <li>Short Front Knob (~2 inches height) with a bead in the base</li>
    <li>Ribbed frog receiver removed</li>
    <li>Depth knob has right hand threading</li>
   </ul></p>
+  <h3><a href="#type_3">Previous (Type 3)</a> - <a href="#type_5">Next (Type 5)</a></h3>
  </article>
  <article id="type_5">
-  <h2>Type 5</h2>
-  <h3>1885 - 1888</h3>
+  <h2>Type 5 - 1885 - 1888</h2>
   <p><ul>
    <li>Lateral adjustment lever appears Patents 111890, 173177, 306877 and 386509</li>
    <li>Lateral adjustment lever stamped with Stanley and dates 2-8-76 and 10-21-84</li>
@@ -500,10 +498,10 @@
    <li>Short Front Knob (~2 inches height) with a bead in the base</li>
    <li>Depth knob has right hand threading</li>
   </ul></p>
+  <h3><a href="#type_4">Previous (Type 4)</a> - <a href="#type_6">Next (Type 6)</a></h3>
  </article>
  <article id="type_6">
-  <h2>Type 6</h2>
-  <h3>1888 - 1892</h3>
+  <h2>Type 6 - 1888 - 1892</h2>
   <p><ul>
    <li>Short Front Knob (~2 inches height)</li>
    <li>Lateral adjustment lever with added disk to engage iron</li>
@@ -511,10 +509,10 @@
    <li>Front knob bead removed</li>
    <li>Grooves in frog receiver</li>
   </ul></p>
+  <h3><a href="#type_5">Previous (Type 5)</a> - <a href="#type_7">Next (Type 7)</a></h3>
  </article>
  <article id="type_7">
-  <h2>Type 7</h2>
-  <h3>1893 - 1899</h3>
+  <h2>Type 7 - 1893 - 1899</h2>
   <p><ul>
    <li>Short Front Knob (~2 inches height)</li>
    <li>Lateral adjustment lever with added disk to engage iron</li>
@@ -522,20 +520,20 @@
    <li>Absent Bailey stamping on depth adjustment knob</li>
    <li>Model number casting change to space the No. from number</li>
   </ul></p>
+  <h3><a href="#type_6">Previous (Type 6)</a> - <a href="#type_8">Next (Type 8)</a></h3>
  </article>
  <article id="type_8">
-  <h2>Type 8</h2>
-  <h3>1899 - 1902</h3>
+  <h2>Type 8 - 1899 - 1902</h2>
   <p><ul>
    <li>Short Front Knob (~2 inches height)</li>
    <li>Lateral adjustment lever has Stanley and 7-24-88 stamping</li>
    <li>Lateral adjustment lever with added disk to engage iron</li>
    <li>Depth knob has left hand threading</li>
   </ul></p>
+  <h3><a href="#type_7">Previous (Type 7)</a> - <a href="#type_9">Next (Type 9)</a></h3>
  </article>
  <article id="type_9">
-  <h2>Type 9</h2>
-  <h3>1902 - 1907</h3>
+  <h2>Type 9 - 1902 - 1907</h2>
   <p><ul>
    <li>"Bailey" appears on the toe of the bed</li>
    <li>Two Patent Dates on bed MAR-25-02 and AUG-19-02</li>
@@ -546,10 +544,10 @@
    <li>Short Front Knob (~2 inches height)</li>
    <li>Knob and tote brass nuts change. TODO get a photo</li>
   </ul></p>
+  <h3><a href="#type_8">Previous (Type 8)</a> - <a href="#type_10">Next (Type 10)</a></h3>
  </article>
  <article id="type_10">
-  <h2>Type 10</h2>
-  <h3>1907 - 1909</h3>
+  <h2>Type 10 - 1907 - 1909</h2>
   <p><ul>
    <li>Two Patent Dates on bed MAR-25-02 and AUG-19-02</li>
    <li>Short Front Knob (~2 inches height)</li>
@@ -557,20 +555,20 @@
    <li>Frog adjustment screw appears</li>
    <li>Enlarged rib on frog receiver</li>
   </ul></p>
+  <h3><a href="#type_9">Previous (Type 9)</a> - <a href="#type_11">Next (Type 11)</a></h3>
  </article>
  <article id="type_11">
-  <h2>Type 11</h2>
-  <h3>1910 - 1918</h3>
+  <h2>Type 11 - 1910 - 1918</h2>
   <p><ul>
    <li>Three Patent Dates MAR-25-02, AUG-19-02 and APR-19-10</li>
    <li>Lateral adjustment lever</li>
    <li>Frog adjustment screw appears</li>
    <li>Short Front Knob (~2 inches height)</li>
   </ul></p>
+  <h3><a href="#type_10">Previous (Type 10)</a> - <a href="#type_12">Next (Type 12)</a></h3>
  </article>
  <article id="type_12">
-  <h2>Type 12</h2>
-  <h3>1919 - 1924</h3>
+  <h2>Type 12 - 1919 - 1924</h2>
   <p><ul>
    <li>First of "Sweetheart" types</li>
    <li>Three Patent Dates</li>
@@ -579,10 +577,10 @@
    <li>Depth adjustment knob changes to larger 1-1/4 inches size</li>
    <li>Updated lever cap with 3/16 inches longer cam</li>
   </ul></p>
+  <h3><a href="#type_11">Previous (Type 11)</a> - <a href="#type_13">Next (Type 13)</a></h3>
  </article>
  <article id="type_13">
-  <h2>Type 13</h2>
-  <h3>1925 - 1928</h3>
+  <h2>Type 13 - 1925 - 1928</h2>
   <p><ul>
    <li>Sweetheart Lateral adjustment lever</li>
    <li>"Stanley" appears on lever cap</li>
@@ -591,10 +589,10 @@
    <li>Stanley cast into lever cap</li>
    <li>Various lever cap finishing with nickel and painted logos during this time</li>
   </ul></p>
+  <h3><a href="#type_12">Previous (Type 12)</a> - <a href="#type_14">Next (Type 14)</a></h3>
  </article>
  <article id="type_14">
-  <h2>Type 14</h2>
-  <h3>1929 - 1930</h3>
+  <h2>Type 14 - 1929 - 1930</h2>
   <p><ul>
    <li>"Made in USA" on bed appears</li>
    <li>Sweetheart</li>
@@ -603,10 +601,10 @@
    <li>Tall front knob (~2-1/2 inches height)</li>
    <li>Raised ring supporting front knob appears</li>
   </ul></p>
+  <h3><a href="#type_13">Previous (Type 13)</a> - <a href="#type_15">Next (Type 15)</a></h3>
  </article>
  <article id="type_15">
-  <h2>Type 15</h2>
-  <h3>1931 - 1932</h3>
+  <h2>Type 15 - 1931 - 1932</h2>
   <p><ul>
    <li>"Made in USA" on bed</li>
    <li>"Stanley" on lever cap</li>
@@ -616,10 +614,10 @@
    <li>Raised Ring for front knob</li>
    <li>Model number now in front of the knob</li>
   </ul></p>
+  <h3><a href="#type_14">Previous (Type 14)</a> - <a href="#type_16">Next (Type 16)</a></h3>
  </article>
  <article id="type_16">
-  <h2>Type 16</h2>
-  <h3>1933 - 1941</h3>
+  <h2>Type 16 - 1933 - 1941</h2>
   <p><ul>
    <li>"Made in USA" on bed</li>
    <li>"Stanley" on lever cap.</li>
@@ -629,10 +627,10 @@
    <li>Tall front knob (~2-1/2 inches height)</li>
    <li>Raised casting at toe and heel</li>
   </ul></p>
+  <h3><a href="#type_15">Previous (Type 15)</a> - <a href="#type_17">Next (Type 17)</a></h3>
  </article>
  <article id="type_17">
-  <h2>Type 17</h2>
-  <h3>1942 - 1945</h3>
+  <h2>Type 17 - 1942 - 1945</h2>
   <p><ul>
    <li>War production, wide variety of changes and variations</li>
    <li>"Stanley" on lever cap.</li>
@@ -644,10 +642,10 @@
    <li>One piece bolt for holding tote</li>
    <li>Models may lack the frog adjustment screw</li>
   </ul></p>
+  <h3><a href="#type_16">Previous (Type 16)</a> - <a href="#type_18">Next (Type 18)</a></h3>
  </article>
  <article id="type_18">
-  <h2>Type 18</h2>
-  <h3>1946 - 1947</h3>
+  <h2>Type 18 - 1946 - 1947</h2>
   <p><ul>
    <li>"Stanley" on lever cap</li>
    <li>Kidney shaped lever cap hole (Patent 1933)</li>
@@ -655,10 +653,10 @@
    <li>Brass adjustment knob back, diagonal knurling</li>
    <li>Knob and tote possibly painted black</li>
   </ul></p>
+  <h3><a href="#type_17">Previous (Type 17)</a> - <a href="#type_19">Next (Type 19)</a></h3>
  </article>
  <article id="type_19">
-  <h2>Type 19</h2>
-  <h3>1948 - 1961</h3>
+  <h2>Type 19 - 1948 - 1961</h2>
   <p><ul>
    <li>"Stanley" on lever cap</li>
    <li>Kidney shaped lever cap hole (Patent 1933)</li>
@@ -667,30 +665,30 @@
    <li>Knob and tote possibly painted black</li>
    <li>Y Adjusting lever could be nickel plated</li>
   </ul></p>
+  <h3><a href="#type_18">Previous (Type 18)</a> - <a href="#type_20">Next (Type 20)</a></h3>
  </article>
  <article id="type_20">
-  <h2>Type 20</h2>
-  <h3>1962 - 1967</h3>
+  <h2>Type 20 - 1962 - 1967</h2>
   <p><ul>
    <li>"Stanley" on lever cap</li>
    <li>Kidney shaped lever cap hole (Patent 1933)</li>
    <li>Blue Paint on bed</li>
    <li>Tall front knob (~2-1/2 inches height)</li>
    <li>Lateral adjustment lever one piece</li>
-  </ul>
-  </p>
+  </ul></p>
+  <h3><a href="#type_19">Previous (Type 19)</a> - <a href="#type_21">Next (Type 21)</a></h3>
  </article>
  <article id="type_21">
-  <h2>Type 20</h2>
-  <h3>1968 - 19??</h3>
+  <h2>Type 21 - 1968 - 19??</h2>
   <p><ul>
-   <li>Most books and resources stop at 1968 but I am noting some things as a type 21</li>
+   <li>Most books and resources stop at 1968</li>
    <li>"Stanley" on lever cap</li>
    <li>Kidney shaped lever cap hole (Patent 1933)</li>
    <li>Red Paint on bed</li>
    <li>Tall front knob (~2-1/2 inches height)</li>
    <li>Cost savings on many parts</li>
   </ul></p>
+  <h3><a href="#type_20">Previous (Type 20)</a></h3>
  </article>
  <article id="patents">
   <h2>Patents used for Stanley planes can offer more information.</h2>
@@ -850,5 +848,5 @@
   </ul></p>
  </article>
  </div>
- <footer>Stanley Plane Identification - <a href="https://github.com/lathama/Stanley_Plane_Identification" target="new">Source Code</a></footer>
+ <footer>Stanley Bench Plane Identification - <a href="https://github.com/lathama/Stanley_Plane_Identification" target="new">Source Code</a></footer>
 </body></html>
