Links to archive.org and note sweetheart logo

--- a/html/index.html
+++ b/html/index.html
@@ -570,7 +570,7 @@
  <article id="type_12">
   <h2>Type 12 - 1919 - 1924</h2>
   <p><ul>
-   <li>First of "Sweetheart" types</li>
+   <li>First of "Sweetheart" types (Stanley Works heart logo)</li>
    <li>Three Patent Dates</li>
    <li>Lateral adjustment lever</li>
    <li>1922 introduced the taller front knob (~2-1/2 inches height)</li>
@@ -582,7 +582,8 @@
  <article id="type_13">
   <h2>Type 13 - 1925 - 1928</h2>
   <p><ul>
-   <li>Sweetheart Lateral adjustment lever</li>
+   <li>Sweetheart (Stanley Works heart logo)</li>
+   <li>Lateral adjustment lever</li>
    <li>"Stanley" appears on lever cap</li>
    <li>One Patent Date APR-19-10 on bed</li>
    <li>Tall front knob (~2-1/2 inches height)</li>
@@ -595,7 +596,7 @@
   <h2>Type 14 - 1929 - 1930</h2>
   <p><ul>
    <li>"Made in USA" on bed appears</li>
-   <li>Sweetheart</li>
+   <li>Sweetheart (Stanley Works heart logo)</li>
    <li>"Stanley" on lever cap</li>
    <li>Lateral adjustment lever</li>
    <li>Tall front knob (~2-1/2 inches height)</li>
@@ -609,7 +610,7 @@
    <li>"Made in USA" on bed</li>
    <li>"Stanley" on lever cap</li>
    <li>Lateral adjustment lever</li>
-   <li>Last of the Sweethearts</li>
+   <li>Last of the Sweethearts (Stanley Works heart logo)</li>
    <li>Tall front knob (~2-1/2 inches height)</li>
    <li>Raised Ring for front knob</li>
    <li>Model number now in front of the knob</li>
@@ -839,8 +840,8 @@
   <a href="images/plane.png" target="new"><img src="images/plane.png" title="Diagram of plane parts" /></a>
   <h3>Note the cast iron bottom of the plane is often called the "bed" in the industry.</h3>
   <p>Resources and Credits:<ul>
-   <li>"The Stanley Plane" by Alvin Sellens 1975 Published by The Early American Industries Association ISBN: 9780961206802</li>
-   <li>Stanley Tools Education Department Chart No. C115</li>
+   <li>"<a href="https://archive.org/details/stanleyplanehist00sell" target="new">The Stanley Plane</a>" by Alvin Sellens 1975 Published by The Early American Industries Association ISBN: 9780961206802</li>
+   <li>Stanley Tools Education Department Chart No. C115 <a href="https://archive.org/embed/StanleyToolGuide1952" target="new">(From Archive.org)<a/></li>
    <li>My extensive collection of vintage tools.</li>
    <li><a href="https://ppubs.uspto.gov/pubwebapp/static/pages/ppubsbasic.html" target="new">United States Patent and Trademark Office</a></li>
    <li>"Patented Transitional Metallic Planes America" by Roger Smith ISBN: 9780940458000 and Vol II ISBN: 9780940458055</li>
