redbubble link and nav cleanup

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
   h1, h2 { line-height: 150%; font-size: 2em; }
   #menubutton { padding: 10px; position: fixed; top: 0px; left: 0px; width: 100%; background-color: #333; color: #fff; text-align: center; }
   nav { display: none; position: fixed; top: 0px; left: 0px; width: 100%; background-color: #333; color: #fff; text-align: center;}
-  nav a { display: block; padding: 7px 14px; text-align: center; color: #fff; font-weight: bold; }
+  nav a { display: block; padding: 4px 7px; text-align: center; color: #fff; font-weight: bold; }
   nav a:hover { background-color: #111; }
   nav:target { display: block !important; }
   dl, dt, dd, ul, li { padding: .2em .2em .2em 1em; list-style-type: square; list-style-position: inside; }
@@ -29,11 +29,11 @@
   img { max-width: 90%; height: auto; }
   .printonly { display: none; }
   /* Not mobile aka computer */
-  @media only screen and ( min-width: 768px)
+  @media only screen and ( min-width: 768px )
   {
    #menubutton { display: none; }
-   nav { display: block; padding: 0px 20px; }
-   nav a { display: inline-block; padding: 14px 16px; }
+   nav { display: block; padding: 0px 0px; }
+   nav a { display: inline-block; padding: 4px 6px; }
   }
   @media print {
    *, html, body, li { margin: 5px; padding: 5px; font-size: 1em; font-weight: normal; }
@@ -47,12 +47,11 @@
 <body>
  <a href="#navigation" id="menubutton">Menu</a>
  <nav id="navigation">
-  <a href="#home">Stanley Bench Planes</a>
-  <a href="#tool">Identification Tool</a>
+  <a href="#home">Stanley Planes</a>
+  <a href="#tool">Identification</a>
   <a href="#types">Types</a>
   <a href="#models">Models</a>
   <a href="#patents">Patents</a>
-  <a href="#competitors">Competitors</a>
   <a href="#glossary">Glossary</a>
   <a href="#faq">FAQ</a>
  </nav>
@@ -833,12 +832,14 @@
    <dt>How do people find great deals on planes at antique or flea markets?</dt>
     <dd>Look often and look everywhere. I bought a rusty but perfect No. 3 for 4-USD in a booth full of fabric.</dd>
     <dd>After the death of some carpenters the spouse would gather up a tool or two and decorate the house with it. Look everywhere.</dd>
+   <dt>Any information about other plane makers?</dt>
+    <dd>Slowly documenting <a href="#competitors">competitors</a> but this will take some time.</dd>
   </dl>
  </article>
  <article id="home">
-  <p>Do you need or want more information about Stanley hand planes? You are in the right place.</p>
   <a href="images/plane.png" target="new"><img src="images/plane.png" title="Diagram of plane parts" /></a>
-  <h3>Note the cast iron bottom of the plane is often called the "bed" in the industry.</h3>
+  <h3><a href="https://www.redbubble.com/i/sticker/Bench-Plane-Diagram-by-gringomalvado/169505260.EJUG5" target="new">Buy stickers or posters of this diagram.</a></h3>
+  <p>Do you need or want more information about Stanley hand planes? You are in the right place.</p>
   <p>Resources and Credits:<ul>
    <li>"<a href="https://archive.org/details/stanleyplanehist00sell" target="new">The Stanley Plane</a>" by Alvin Sellens 1975 Published by The Early American Industries Association ISBN: 9780961206802</li>
    <li>Stanley Tools Education Department Chart No. C115 <a href="https://archive.org/embed/StanleyToolGuide1952" target="new">(From Archive.org)<a/></li>
