More research and citations for different weights

--- a/html/index.html
+++ b/html/index.html
@@ -306,10 +306,11 @@
   <p><ul>
    <li>1870 - 1943</li>
    <li>Smoothing Plane</li>
+   <li>No lateral adjustment feature</li>
    <li>Length: 5-1/2 inches</li>
    <li>Width of cutter: 1-1/4 inches</li>
-   <li>Weight: 1-1/8 LBs</li>
-   <li>No lateral adjustment feature</li>
+   <li>Weight: 1-1/8 The Stanley Plane by Alvin Sellens</li>
+   <li>Weight: 1-1/4 LBs Catalog 139 1939</li>
   </ul></p>
   <h3><a href="#model_2">Next No. 2</a></h3>
  </article>
@@ -321,7 +322,9 @@
    <li>Smoothing Plane</li>
    <li>Length: 7 inches</li>
    <li>Width of cutter: 1-5/8 inches</li>
-   <li>Weight: 2-1/4 LBs</li>
+   <li>Weight: 2-1/4 The Stanley Plane by Alvin Sellens</li>
+   <li>Weight: 2-1/2 LBs Catalog 139 1939</li>
+   <li>Corrugated Weight: 2-1/2 LBs Catalog 139 1939</li>
   </ul></p>
   <h3><a href="#model_1">Previous No. 1</a> - <a href="#model_3">Next No. 3</a></h3>
  </article>
@@ -333,7 +336,9 @@
    <li>Smoothing Plane</li>
    <li>Length: 8 inches</li>
    <li>Width of cutter: 1-3/4 inches</li>
-   <li>Weight: 3-1/8 LBs</li>
+   <li>Weight: 3-1/8 The Stanley Plane by Alvin Sellens</li>
+   <li>Weight: 3-1/2 LBs Catalog 139 1939</li>
+   <li>Corrugated Weight: 3-1/2 LBs Catalog 139 1939</li>
   </ul></p>
   <a href="images/no3boxlabel.png" target="new"><img src="images/no3boxlabel.png" title="Stanley No. 3 Box Label" /></a>
   <h3><a href="#model_2">Previous No. 2</a> - <a href="#model_4">Next No. 4</a></h3>
@@ -346,7 +351,9 @@
    <li>Smoothing Plane</li>
    <li>Length: 9 inches or 9-1/4 inches</li>
    <li>Width of cutter: 2 inches</li>
-   <li>Weight: 3-3/4 LBs</li></li>
+   <li>Weight: 3-3/4 The Stanley Plane by Alvin Sellens</li>
+   <li>Weight: 3-3/4 LBs Catalog 139 1939</li></li>
+   <li>Corrugated Weight: 3-3/4 LBs Catalog 139 1939</li>
   </ul></p>
   <h3><a href="#model_3">Previous No. 3</a> - <a href="#model_4_1_2">Next No. 4 1/2</a></h3>
  </article>
@@ -358,7 +365,9 @@
    <li>Smoothing Plane</li>
    <li>Length: 10 inches</li>
    <li>Width of cutter: 2-3/8 inches</li>
-   <li>Weight: 4-3/4 LBs</li></li>
+   <li>Weight: 4-3/4 The Stanley Plane by Alvin Sellens</li>
+   <li>Weight: 5 LBs Catalog 139 1939</li></li>
+   <li>Corrugated Weight: 4-7/8 LBs Catalog 139 1939</li>
   </ul></p>
   <h3><a href="#model_4">Previous No. 4</a> - <a href="#model_5">Next No. 5</a></h3>
  </article>
@@ -370,7 +379,9 @@
    <li>Jack Plane</li>
    <li>Length: 14 inches</li>
    <li>Width of cutter: 2 inches</li>
-   <li>Weight: 4-3/4 LBs</li>
+   <li>Weight: 4-3/4 The Stanley Plane by Alvin Sellens</li>
+   <li>Weight: 5 LBs Catalog 139 1939</li>
+   <li>Corrugated Weight: 4-3/4 LBs Catalog 139 1939</li>
   </ul></p>
   <h3><a href="#model_4_1_2">Previous No. 4 1/2</a> - <a href="#model_5_1_4">Next No. 5 1/4</a></h3>
  </article>
@@ -382,7 +393,9 @@
    <li>Jack Plane (also Junior or School)</li>
    <li>Length: 11-1/2 inches</li>
    <li>Width of cutter: 1-3/4 inches</li>
-   <li>Weight: 3-3/4 LBs</li>
+   <li>Weight: 3-3/4 The Stanley Plane by Alvin Sellens</li>
+   <li>Weight: 3-3/4 LBs Catalog 139 1939</li>
+   <li>Corrugated Weight: 3-3/4 LBs Catalog 139 1939</li>
   </ul></p>
   <h3><a href="#model_5">Previous No. 5</a> - <a href="#model_5_1_2">Next No. 5 1/2</a></h3>
  </article>
@@ -394,7 +407,9 @@
    <li>Jack Plane</li>
    <li>Length: 15 inches</li>
    <li>Width of cutter: 2-1/4 inches, after 1939 2-3/8 inches</li>
-   <li>Weight: 6-3/4 LBs</li>
+   <li>Weight: 6-3/4 The Stanley Plane by Alvin Sellens</li>
+   <li>Weight: 6 LBs Catalog 139 1939</li>
+   <li>Corrugated Weight: 5-7/8 LBs Catalog 139 1939</li>
   </ul></p>
   <h3><a href="#model_5_1_4">Previous No. 5 1/4</a> - <a href="#model_6">Next No. 6</a></h3>
  </article>
@@ -406,7 +421,9 @@
    <li>Fore Plane</li>
    <li>Length: 18 inches</li>
    <li>Width of cutter: 2-3/8 inches</li>
-   <li>Weight: 7-3/4 LBs</li>
+   <li>Weight: 7-3/4 The Stanley Plane by Alvin Sellens</li>
+   <li>Weight: 7 LBs Catalog 139 1939</li>
+   <li>Corrugated Weight: 6-7/8 LBs Catalog 139 1939</li>
   </ul></p>
   <h3><a href="#model_5_1_2">Previous No. 5 1/2</a> - <a href="#model_7">Next No. 7</a></h3>
  </article>
@@ -418,7 +435,9 @@
    <li>Jointer Plane</li>
    <li>Length: 22 inches</li>
    <li>Width of cutter: 2-3/8 inches</li>
-   <li>Weight: 8-1/8 LBs</li>
+   <li>Weight: 8-1/8 The Stanley Plane by Alvin Sellens</li>
+   <li>Weight: 8 LBs Catalog 139 1939</li>
+   <li>Corrugated Weight: 7-3/4 LBs Catalog 139 1939</li>
   </ul></p>
   <h3><a href="#model_6">Previous No. 6</a> - <a href="#model_8">Next No. 8</a></h3>
  </article>
@@ -428,9 +447,12 @@
    <li>1870 - 1958 Smooth</li>
    <li>1898 - 1958 Corrugated</li>
    <li>Jointer Plane</li>
+   <li>Note the 2-5/8 lever cap is often switched with 2-3/8 from other planes.</li>
    <li>Length: 24 inches</li>
    <li>Width of cutter: 2-5/8 inches</li>
-   <li>Weight: 9-3/4 LBs</li>
+   <li>Weight: 9-3/4 The Stanley Plane by Alvin Sellens</li>
+   <li>Weight: 9-1/2 LBs Catalog 139 1939</li>
+   <li>Corrugated Weight: 9-1/4 LBs Catalog 139 1939</li>
   </ul></p>
   <h3><a href="#model_7">Previous No. 7</a> - <a href="#model_9">Next No. 9</a></h3>
  </article>
@@ -777,6 +799,28 @@
   <p>I noticed they have a router plane so I added them to the list.</p>
  </article>
  <article id="glossary">
+  <h3>Definitions</h3>
+  <dl>
+   <dt>Chip-Breaker</dt>
+    <dd>A part affixed to the blade that causes the shavings to curl.</dd>
+   <dt>Frog</dt>
+    <dd>The support for the iron or blade. The frog holds the angle and optionally advances or retracts the cutting edge.</dd>
+   <dt>Gage</dt>
+    <dd>A design series where the blade is advanced securly with special toothed/slotted blades.</dd>
+    <dd>Frogs can be cast into the base in Gage series planes.</dd>
+   <dt>Handle</dt>
+    <dd>The rear handle of the plane. Stanely documentation and parts sales always calls it the handle.</dd>
+    <dd>In <a href="https://archive.org/embed/mechanickexercis00moxo" target="_new">Mechanic Exercises</a> Joseph Moxon describes on page 61 a horizontal handle as a tote from Plate 4.</dd>
+   <dt>Iron Cap</dt>
+    <dd>See Chip-Breaker</dd>
+   <dt>Sweetheart</dt>
+    <dd>A heart logo used from 1919 with SW for Stanley Works. In 1919 Stanley Rule and Level and Stanley Works merged.</dd>
+    <dd>The Sweetheart line could be in honor of William H. Hart the champion of the company.</dd>
+   <dt>Tote</dt>
+    <dd>See Handle</dd>
+   <dt></dt>
+    <dd></dd>
+  </dl>
   <h3>Additional Letter designations</h3>
   <dl>
    <dt>A (Prefix)</dt>
@@ -791,9 +835,8 @@
    <dd>Malleable</dd>
    <dt>P (Subscript)</dt>
    <dd>Plane (Used when duplicate models existed in catalog)</dd>
-   <dt>Years</dt>
-   <dd>Stanley bought Bailey in 1869 and the first catalog was in 1870.</dd>
-   <dd>Stanley (branded packaging) planes could have been built in late 1869.</dd>
+   <dt>S (Prefix)</dt>
+   <dd>Steel</dd>
   </dl>
  </article>
  <article id="faq">
@@ -802,33 +845,34 @@
    <dt>Plane says Bailey not Stanley, is this a Stanley plane?</dt>
     <dd>Yes, Bailey is a reference to the style and creator of the design.</dd>
     <dd>Stanley name was added to the lateral adjustment lever and later the cap.</dd>
-    <dd>It is strange that Stanley was never added to the bed.</dd>
+    <dd>It is strange that Stanley was never added to the base or bed casting.</dd>
    <dt>The threads on some of the plane parts are strange, how do I repair them?</dt>
     <dd>Some threads are Whitworth-style with a slightly different size and degree of thread.</dd>
     <dd>Most USA made Stanley Planes have 12-20 Whitworth-style threading for the tote and knob screws.</dd>
     <dd>Planes made in England or other countries after the 1940s may have UNC threading.</dd>
     <dd>Buy a thread checking gauge to be sure. Be aware that a century of use can cause wear on threads.</dd>
-    <dd>Look for BSW or Whitworth Tap and Dies.</dd>
+    <dd>Look for British Standard Whitworth (BSW) or Whitworth Tap and Dies.</dd>
     <dd><a href="https://en.wikipedia.org/wiki/British_Standard_Whitworth" target="new">British Standard Whitworth Wikipedia page.</a></dd>
     <dd>For better or worse, Whitworth was the first "Standardized" thread adopted by industries.</dd>
    <dt>Attempting to identify a plane and nothing matches up, what is wrong?</dt>
     <dd>It is possible that parts have been swapped or replaced over the past century.</dd>
-    <dd>A good plane dropped on a solid floor may break the bed and parts would be reused.</dd>
+    <dd>A plane dropped on a solid floor may break the bed. Plane parts would be reused.</dd>
    <dt>What wood is the tote and knob handles made of?</dt>
     <dd>It can vary but Rosewood is the most common. From Brazil or India.</dd>
     <dd>Rosewood was/is over-harvested and difficult to get these days.</dd>
+    <dd>Cocobola used starting in in 1929. Random hardwoods used in 1948 and later.</dd>
    <dt>What Types(series) of Stanley plane is the most useful for woodworking?</dt>
     <dd>Books mention that type 12 and up are most useful.</dd>
     <dd>Anything with the lateral adjustment lever will work well.</dd>
     <dd>Even basic planes from any maker can be useful for tasks chamfering boards.</dd>
    <dt>What is Japanning on a Stanley plane?</dt>
-    <dd>Japanning is a method of painting where a finish is also heated to cure for a durable finish.</dd>
+    <dd>Japanning is a method of finishing where a finish is also heated to cure for a durable finish.</dd>
     <dd>Modern paints can mimic the finish. Collectors want original Japanning.</dd>
     <dd><a href="https://en.wikipedia.org/wiki/Japanning" target="new">Japanning Wikipedia Page</a></dd>
    <dt>Where can I find new blades for my plane?</dt>
     <dd>Stanley irons/blades can be found. Often as new old stock.</dd>
     <dd>Hock is a modern brand for plane irons.</dd>
-    <dd>Remember to search for irons, and blades.</dd>
+    <dd>Remember to search for irons, steels, and blades.</dd>
     <dd>I have bought damaged or incomplete planes just for the quality irons in them.</dd>
     <dd>Wood body planes and transitional planes can be found with quality original irons.</dd>
    <dt>Why are there corrugated bottom planes?</dt>
@@ -837,14 +881,16 @@
    <dt>Is a Jack plane a scrub plane?</dt>
     <dd>It can be. Scrub planes are about the shape of the iron/blade.</dd>
     <dd>Typically sharpened with a radius/curve to remove more wood in the center.</dd>
+    <dd>Stanley did make and market specific scrub planes like the 40 and 40-1/2</dd>
    <dt>Why are hand planes still in use today?</dt>
     <dd>Control and finish quality. A good sharp plane or scraper does not require sanding.</dd>
     <dd>Quiet and safety are also great reasons. No hearing protection needed.</dd>
    <dt>How do people find great deals on planes at antique or flea markets?</dt>
-    <dd>Look often and look everywhere. I bought a rusty but perfect No. 3 for 4-USD in a booth full of fabric.</dd>
+    <dd>Look often and look everywhere. I bought a rusty but perfect No. 3 for 4 dollars in a booth full of fabric.</dd>
     <dd>After the death of some carpenters the spouse would gather up a tool or two and decorate the house with it. Look everywhere.</dd>
    <dt>Any information about other plane makers?</dt>
     <dd>Slowly documenting <a href="#competitors">competitors</a> but this will take some time.</dd>
+    <dd>Defiance Tools was a brand produced by Stanely.</dd>
   </dl>
  </article>
  <article id="home">
